initial select app lang

--- a/EditingNameFeature/Resources/Localizable.xcstrings
+++ b/EditingNameFeature/Resources/Localizable.xcstrings
@@ -70,6 +70,7 @@
       }
     },
     "Something went wrong." : {
+      "extractionState" : "stale",
       "localizations" : {
         "th" : {
           "stringUnit" : {
