try to figure out lang setup

--- a/SearchFeature/Resources/Localizable.xcstrings
+++ b/SearchFeature/Resources/Localizable.xcstrings
@@ -120,6 +120,23 @@
         }
       }
     },
+    "Search…" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Search…"
+          }
+        },
+        "th" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ค้นหา..."
+          }
+        }
+      }
+    },
     "Wash Staton" : {
       "extractionState" : "manual",
       "localizations" : {
