--- a/UserProfileFeature/Resources/Localizable.xcstrings
+++ b/UserProfileFeature/Resources/Localizable.xcstrings
@@ -2,6 +2,7 @@
   "sourceLanguage" : "en",
   "strings" : {
     "%@ $FXS" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -69,6 +70,7 @@
       }
     },
     "Earn coins by creating form-requests pinned on the map. Once approved, you’ll receive $FXS." : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
